--- a/theremin_devicemotion.htm
+++ b/theremin_devicemotion.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Theremin (btm's MozOrientation Version)</title>
+<title>Theremin (btm's Device Motion Version)</title>
 <style>
 :root {
 	-moz-user-select: none;
